{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 256,
  "lineage": "51cf13bb-1407-24ee-6651-6be347afd83b",
  "resources": [
    {
      "module": "module.squid",
      "mode": "managed",
      "type": "aws_eip",
      "name": "squid",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9a03d98cfc23c15",
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:elastic-ip/eipalloc-0b9a03d98cfc23c15",
            "domain": "vpc",
            "id": "eipalloc-0b9a03d98cfc23c15",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-75-26-177.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.75.26.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "dev-squid-eip",
              "Service": "squid-proxy",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-squid-eip",
              "Project": "squid-proxy",
              "Service": "squid-proxy",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.squid_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:security-group/sg-033d4a69ca99e12a4",
            "description": "Security group for Squid proxy",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033d4a69ca99e12a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress Rule",
                "from_port": 3128,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3128
              }
            ],
            "name": "squid-sg-20241230075810684500000002",
            "name_prefix": "squid-sg-",
            "owner_id": "466601480040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "squid-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-sg",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.squid_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-4003092361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-033d4a69ca99e12a4",
            "security_group_rule_id": "sgr-01802dede69bf4e6f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.squid_sg.aws_security_group.this",
            "module.squid_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.squid_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Ingress Rule",
            "from_port": 3128,
            "id": "sgrule-4115028925",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-033d4a69ca99e12a4",
            "security_group_rule_id": "sgr-0d3d065d6ced5eeed",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3128,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.squid_sg.aws_security_group.this",
            "module.squid_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:network-acl/acl-0437eda8509fe3dde",
            "default_network_acl_id": "acl-0437eda8509fe3dde",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0437eda8509fe3dde",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "466601480040",
            "subnet_ids": [
              "subnet-0ce3edbcbf180c32e"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc-default",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:route-table/rtb-0cf5024ed9e726ac8",
            "default_route_table_id": "rtb-0cf5024ed9e726ac8",
            "id": "rtb-0cf5024ed9e726ac8",
            "owner_id": "466601480040",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc-default",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:security-group/sg-0e6fd3eb11b5c4526",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e6fd3eb11b5c4526",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "466601480040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc-default"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc-default",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:internet-gateway/igw-014ddeec13a848d8a",
            "id": "igw-014ddeec13a848d8a",
            "owner_id": "466601480040",
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-014ddeec13a848d8a",
            "id": "r-rtb-0621db1713f20a9d91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0621db1713f20a9d9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:route-table/rtb-0621db1713f20a9d9",
            "id": "rtb-0621db1713f20a9d9",
            "owner_id": "466601480040",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014ddeec13a848d8a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc-public",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0816510b98dec0115",
            "route_table_id": "rtb-0621db1713f20a9d9",
            "subnet_id": "subnet-0ce3edbcbf180c32e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:subnet/subnet-0ce3edbcbf180c32e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3edbcbf180c32e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466601480040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc-public-ap-northeast-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc-public-ap-northeast-1a",
              "Project": "squid-proxy",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01bb43bc3ad10f05c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:466601480040:vpc/vpc-01bb43bc3ad10f05c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0437eda8509fe3dde",
            "default_route_table_id": "rtb-0cf5024ed9e726ac8",
            "default_security_group_id": "sg-0e6fd3eb11b5c4526",
            "dhcp_options_id": "dopt-9a9778fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bb43bc3ad10f05c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf5024ed9e726ac8",
            "owner_id": "466601480040",
            "tags": {
              "Environment": "dev",
              "Name": "squid-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "squid-vpc",
              "Project": "squid-proxy",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}